--- a/V005/style.css
+++ b/V005/style.css
@@ -1,3 +1,17 @@
 body{
     text-align: center;
 }
+
+td{
+    border: 3px solid black;
+    padding: 5px 10px 5px 10px;
+}
+
+#theadd{
+    border: 1px solid black;
+    padding: 5px 10px 5px 10px;
+}
+
+.listss{
+    text-align: left;
+}
