--- a/V008/style.css
+++ b/V008/style.css
@@ -1,3 +1,20 @@
 body{
     text-align: center;
+    background-color: white;
+}
+
+h1{
+    background-color: aquamarine;
+}
+
+a{
+    background-color: tomato;
+}
+
+div{
+    background-color: yellow;
+}
+
+span{
+    background-color: rgb(255, 156, 156);
 }
