--- a/V011/style.css
+++ b/V011/style.css
@@ -1,3 +1,11 @@
 body{
     text-align: center;
 }
+nav{
+    background-color: aquamarine;
+}
+footer{
+    background-color: blueviolet;
+    color: aliceblue;
+    padding: 10px 10px 10px 10px;
+}
